# ros-padawan-projects

./: README.md
catkin_ws/: params.yaml
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/devel/include/motion_planning/: AV.h  Cars.h  Cars_vector.h
catkin_ws/devel/lib/beginner_tutorials/: add_two_ints_client  add_two_ints_server  listener  talker
catkin_ws/devel/lib/gscam/: gscam  gscam_node
catkin_ws/devel/lib/motion_planning/: motion_planning
catkin_ws/devel/lib/pkgconfig/: beginner_tutorials.pc  gscam.pc  motion_planning.pc  path_finder_1.pc  perception_assignment_1.pc  robot.pc  ros_bag_to_video_cpp.pc  turtlesim_cleaner.pc  turtlsim_pathfinder.pc  video_handler.pc  video_to_ros.pc
catkin_ws/devel/lib/ros_bag_to_video_cpp/: ros_bag_to_video_cpp
catkin_ws/src/: .rosinstall.bak
catkin_ws/src/motion_planning/: CMakeLists.txt
catkin_ws/src/motion_planning/msg/: AV.msg  Cars.msg  Cars_vector.msg
catkin_ws/src/motion_planning/src/: motion_planning.cpp  topic2.txt
catkin_ws/src/motion_planning/src/Experimental FSM (not finished)/: Driving.h  DrivingState.h
catkin_ws/src/motion_planning/src/bagfiles/: topic1.bag  topic2.bag
catkin_ws/src/perception_assignment_1/scripts/: image_feature.py
catkin_ws/src/ros_bag_to_video_cpp/src/: a.out  opencv_bug.cpp  out.avi  (+1 more)
motion_planning/src/: publisher.py  topic1.txt
motion_planning/src/Experimental FSM (not finished)/: ConcreteDrivingStates.cpp  ConcreteDrivingStates.h
perception_assignment_1/: CMakeLists.txt
perception_assignment_1/scripts/: image_feature.py
(+43 files in other folders)
